@@ -3,7 +3,7 @@ import { Link } from "react-router-dom";
 const Logout = (props) => {
   return (
     <div>
-      <Link to="/Logout">Logout</Link>
+      <Link to="/">Logout</Link>
     </div>
   );
 };
